--- a/stylesheets/partials/units/_modal.scss
+++ b/stylesheets/partials/units/_modal.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     right: 0;
     background: rgba(0, 0, 0, .5);
-    z-index: 10;
+    z-index: 999;
 	display: none;
 	
 	&.active {
